# clusterStore

./: .gitignore  README.md  clusterStore.md  clusterStoreDev.md  package-lock.json  package.json  tsconfig.base.json
docs/: architecture.md  audit-and-runbook.md  capability-map.md  clusterStore.md  clusterstore-master-plan.md  clusterstore-master-reference.md  current-audit.md  deployment-guide.md  git-packaging-plan.md  implementation-audit-2026-04-29.md  local-mosquitto-setup.md  master-implementation-walkthrough.md  next-development-roadmap.md  node-deployment-modes.md  operations-runbook.md  roadmap.md  system-state-and-deployment.md  target-state-audit-2026-04-29.md  zzzz.md
firmware/clusterstore-firmware/: CMakeLists.txt  README.md
firmware/clusterstore-firmware/app/: CMakeLists.txt  README.md  cs_can_bench_node.c  cs_can_bench_node.h  cs_g474_board_defaults.c  cs_g474_board_defaults.h  cs_native_node_runtime.c  cs_native_node_runtime.h  main.c  native_main.c
firmware/clusterstore-firmware/app/linker/: g474_slot_a.ld  g474_slot_b.ld
firmware/clusterstore-firmware/boot/: CMakeLists.txt  README.md  main.c
firmware/clusterstore-firmware/boot/linker/: g474_bootloader.ld
firmware/clusterstore-firmware/bsp/host/: README.md
firmware/clusterstore-firmware/bsp/stm32g474/: CMakeLists.txt  README.md  cs_adc_g474.c  cs_adc_g474.h  cs_bsp.h  cs_bsp_g474.c  cs_bsp_g474.h  cs_can_g474.c  cs_can_g474.h  cs_cluster_bridge_g474.c  cs_cluster_bridge_g474.h  cs_flash_g474.c  cs_flash_g474.h  cs_ina228.c  cs_ina228.h  cs_iwdg_g474.c  cs_iwdg_g474.h  cs_syscalls.c
firmware/clusterstore-firmware/bsp/stm32g474/bench/: README.md  can_bench.py
firmware/clusterstore-firmware/bsp/stm32g474/cube_generated/: README.md
firmware/clusterstore-firmware/bsp/stm32g474/cube_generated/Inc/: cs_cube_g474_board.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
firmware/clusterstore-firmware/bsp/stm32g474/cube_generated/Src/: cs_cube_g474_board.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  system_stm32g4xx.c
firmware/clusterstore-firmware/bsp/stm32g474/startup/: startup_stm32g474xx.s
firmware/clusterstore-firmware/cmake/: arm-none-eabi.cmake  host-gcc.cmake  version.cmake
firmware/clusterstore-firmware/lib/boot_control/: cs_boot_control.c  cs_boot_control.h  cs_crc32.c  cs_crc32.h
firmware/clusterstore-firmware/lib/cluster_platform/: cs_cluster_platform.c  cs_cluster_platform.h
firmware/clusterstore-firmware/lib/journal/: cs_journal.c  cs_journal.h
firmware/clusterstore-firmware/scripts/: README.md  build-g474-hal.ps1  check-firmware-env.ps1
firmware/clusterstore-firmware/tests/: CMakeLists.txt  cs_test.h  test_boot_control.c  test_cluster_platform.c  test_g474_bsp.c  test_journal.c  test_node_boot_control.c  test_node_persistent_state.c
firmware/clusterstore-firmware/tests/fixtures/: cluster_platform_sim.c  cluster_platform_sim.h  flash_sim.c  flash_sim.h
firmware/node-firmware/: README.md
firmware/node-firmware/include/: cluster_boot_control.h  cluster_bootloader_runtime.h  cluster_can_protocol.h  cluster_command_manager.h  cluster_contactor_manager.h  cluster_crc32.h  cluster_current_ramp.h  cluster_event_journal.h  cluster_flash_layout.h  cluster_node_controller.h  cluster_node_runtime.h  cluster_ota_manager.h  cluster_persistent_state.h  cluster_platform.h  cluster_state_machine.h  cluster_stm32_boot.h  cluster_stm32_hal.h
firmware/node-firmware/src/: cluster_boot_control.c  cluster_bootloader_runtime.c  cluster_can_protocol.c  cluster_command_manager.c  cluster_contactor_manager.c  cluster_crc32.c  cluster_current_ramp.c  cluster_event_journal.c  cluster_flash_layout.c  cluster_node_controller.c  cluster_node_runtime.c  cluster_ota_manager.c  cluster_persistent_state.c  cluster_platform.c  cluster_state_machine.c  cluster_stm32_boot.c  cluster_stm32_hal.c
scripts/: clusterstore-can-adapter.mjs  clusterstore-watchdog-adapter.mjs  fake-mqtt-broker-cli.mjs  full-audit.ps1  live-readiness-check.mjs  local-mosquitto.ps1  smoke-daemon-stack.ps1  smoke-simulator.mjs
services/cluster-ems/: package.json
services/cluster-ems/config/: can-adapter.json  daemon.json  live.daemon.json  watchdog-adapter.json
services/cluster-ems/src/: config.ts  daemon.ts  dispatch.ts  ems-controller.ts  fault-manager.ts  index.ts  runtime.ts  startup-sequencer.ts
services/cluster-ems/src/adapters/: bms-adapter.ts  can-bus.ts  hmi.ts  journal.ts  modbus.ts  watchdog.ts
services/utilitycore-bridge/: package.json
services/utilitycore-bridge/config/: daemon.json  secure.daemon.json
services/utilitycore-bridge/config/certs/: README.md
services/utilitycore-bridge/config/mosquitto/: local-dev.conf
services/utilitycore-bridge/src/: bridge-service.ts  command-router.ts  daemon.ts  index.ts  mqtt-client.ts  runtime.ts
tests/: all.test.mjs  firmware-binding.test.mjs  overlay-bms-adapter.test.mjs
tests/support/: fake-modbus-server.mjs  fake-mqtt-broker.mjs  firmware-binding-runtime.mjs  in-memory-runtime.mjs
